--- a/OnlineShop/Views/Home/AddMember.cshtml
+++ b/OnlineShop/Views/Home/AddMember.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Login";
+    ViewBag.Title = "AddMember";
 }
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -14,9 +14,25 @@
             <label>密碼</label>
             <input id="PassWord" type="password" class="form-control">
         </div>
+        @*<div class="form-group">
+                <label>確認密碼</label>
+                <input type="password" class="form-control">
+            </div>*@
+        <div class="form-group">
+            <label>手機號碼</label>
+            <input id="Phone" type="text" class="form-control">
+        </div>
+        <div class="form-group">
+            <label>信箱</label>
+            <input id="Mail" type="text" class="form-control">
+        </div>
+        @*<div class="form-group">
+                <label>認證碼</label>
+                <input type="password" class="form-control">
+            </div>*@
     </div>
     <div class="panel-footer">
-        <button id="Post" type="button" class="btn btn-primary">登入</button>
+        <button id="Post" type="button" class="btn btn-primary">註冊</button>
     </div>
 </div>
 
@@ -24,13 +40,15 @@
     $(document).ready(function (data) {
         $("#Post").click(function () {
             $.ajax({
-                url: "/api/Login",
+                url: "/api/Member",
                 type: "post",
                 contentType: "application/json",
                 dataType: "text",
                 data: JSON.stringify({
                     "Account": $("#Account").val(),
-                    "Pwd": $("#PassWord").val()
+                    "Pwd": $("#PassWord").val(),
+                    "Phone": $("#Phone").val(),
+                    "Mail": $("#Mail").val()
                 }),
                 success: function (result) {
                     alert(result)
