20220419 以ADO方式進行註冊登入, 添加註冊登入判斷

--- a/OnlineShop/Views/Home/AddMember.cshtml
+++ b/OnlineShop/Views/Home/AddMember.cshtml
@@ -14,10 +14,6 @@
             <label>密碼</label>
             <input id="PassWord" type="password" class="form-control">
         </div>
-        @*<div class="form-group">
-                <label>確認密碼</label>
-                <input type="password" class="form-control">
-            </div>*@
         <div class="form-group">
             <label>手機號碼</label>
             <input id="Phone" type="text" class="form-control">
@@ -27,9 +23,9 @@
             <input id="Mail" type="text" class="form-control">
         </div>
         @*<div class="form-group">
-                <label>認證碼</label>
-                <input type="password" class="form-control">
-            </div>*@
+            <label>信箱認證碼</label>
+            <input type="text" class="form-control">
+        </div>*@
     </div>
     <div class="panel-footer">
         <button id="Post" type="button" class="btn btn-primary">註冊</button>
