--- a/OnlineShop/Views/Home/Login.cshtml
+++ b/OnlineShop/Views/Home/Login.cshtml
@@ -17,6 +17,7 @@
     </div>
     <div class="panel-footer">
         <button id="Post" type="button" class="btn btn-primary">登入</button>
+        @Html.ActionLink("忘記密碼", "ForgetPwd", "Home")
     </div>
 </div>
 
