--- a/OnlineShop/Pages/Login/Login.cshtml
+++ b/OnlineShop/Pages/Login/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@page
+@model OnlineShop.Pages.LoginModel
+@{
     ViewData["Title"] = "Login";
 }
 
@@ -6,17 +8,17 @@
     <div class="panel-body">
         <div class="form-group">
             <label>帳號</label>
-            <input id="Account" type="text" class="form-control">
+            <input id="txtAccount" type="text" class="form-control">
         </div>
         <div class="form-group">
             <label>密碼</label>
-            <input id="PassWord" type="password" class="form-control">
+            <input id="passWord" type="password" class="form-control">
         </div>
     </div>
     <div class="panel-footer">
-        <button id="Post" type="button" class="btn btn-primary">登入</button>
+        <button id="btnPost" type="button" class="btn btn-primary">登入</button>
         @Html.ActionLink("忘記密碼", "ForgetPwd", "Home")
     </div>
 </div>
 
-<script src="~/js/Login.js" type="text/javascript"></script>
+<script src="~/js/Login.js"></script>
