--- a/OnlineShop/Pages/ForgetPwd.cshtml
+++ b/OnlineShop/Pages/ForgetPwd.cshtml
@@ -5,14 +5,14 @@
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
-<div class="panel panel-primary">
-    <div class="panel-body">
-        <div class="form-group">
+<div class="panel panelPrimary">
+    <div class="panelBody">
+        <div class="formGroup">
             <label>帳號</label>
-            <input id="Account" type="text" class="form-control">
+            <input id="Account" type="text" class="formControl">
         </div>
     </div>
-    <div class="panel-footer">
-        <button id="Post" type="button" class="btn btn-primary">寄送驗證碼</button>
+    <div class="panelFooter">
+        <button id="Post" type="button" class="btn btnPrimary">寄送驗證碼</button>
     </div>
 </div>
