--- a/OnlineShop/Pages/Login/Login.cshtml
+++ b/OnlineShop/Pages/Login/Login.cshtml
@@ -4,21 +4,24 @@
     ViewData["Title"] = "Login";
 }
 
-<div class="panel panel-primary">
-    <div class="panel-body">
-        <div class="form-group">
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<div class="panel panelPrimary">
+    <div class="panelBody">
+        <div class="formGroup">
             <label>帳號</label>
-            <input id="txtAccount" type="text" class="form-control">
+            <input id="txtAccount" type="text" class="formControl" maxlength="20">
         </div>
-        <div class="form-group">
+        <div class="formGroup">
             <label>密碼</label>
-            <input id="passWord" type="password" class="form-control">
+            <input id="passWord" type="password" class="formControl">
         </div>
     </div>
-    <div class="panel-footer">
-        <button id="btnPost" type="button" class="btn btn-primary">登入</button>
+    <div class="panelFooter">
+        <button id="btnPost" type="button" class="btn btnPrimary">登入</button>
         @Html.ActionLink("忘記密碼", "ForgetPwd", "Home")
     </div>
+    <div id="dvMsg">@Model.Message</div>
 </div>
 
 <script src="~/js/Login.js"></script>
