--- a/OnlineShop/Pages/Member/AddMember.cshtml
+++ b/OnlineShop/Pages/Member/AddMember.cshtml
@@ -4,31 +4,33 @@
     ViewBag.Title = "AddMember";
 }
 
-<div class="panel panel-primary">
-    <div class="panel-body">
-        <div class="form-group">
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+<div class="panel panelPrimary">
+    <div class="panelBody">
+        <div class="formGroup">
             <label>帳號</label>
-            <input id="txtAccount" type="text" class="form-control">
+            <input id="txtAccount" type="text" class="formControl">
         </div>
-        <div class="form-group">
+        <div class="formGroup">
             <label>密碼</label>
-            <input id="passWord" type="password" class="form-control">
+            <input id="passWord" type="password" class="formControl">
         </div>
-        <div class="form-group">
+        <div class="formGroup">
             <label>手機號碼</label>
-            <input id="txtPhone" type="text" class="form-control">
+            <input id="txtPhone" type="text" class="formControl">
         </div>
-        <div class="form-group">
+        <div class="formGroup">
             <label>信箱</label>
-            <input id="txtMail" type="text" class="form-control">
+            <input id="txtMail" type="text" class="formControl">
         </div>
         @*<div class="form-group">
                 <label>信箱認證碼</label>
                 <input type="text" class="form-control">
             </div>*@
     </div>
-    <div class="panel-footer">
-        <button id="btnPost" type="button" class="btn btn-primary">註冊</button>
+    <div class="panelFooter">
+        <button id="btnPost" type="button" class="btn btnPrimary">註冊</button>
     </div>
 </div>
 
