--- a/OnlineShop/Pages/Login/Login.cshtml
+++ b/OnlineShop/Pages/Login/Login.cshtml
@@ -10,11 +10,11 @@
         <div class="panelBody">
             <div class="formGroup">
                 <label>帳號</label>
-                <input id="txtAccount" name="account" type="text" class="formControl" maxlength="20">
+                <input id="txtAccount" type="text" class="formControl">
             </div>
             <div class="formGroup">
                 <label>密碼</label>
-                <input id="passWord" name="password" type="password" class="formControl">
+                <input id="passWord" type="password" class="formControl">
             </div>
         </div>
         <div class="panelFooter">
