20220504 1.註冊頁面修改(持續修改驗證碼部分)

--- a/OnlineShop/Pages/ForgetPwd.cshtml
+++ b/OnlineShop/Pages/ForgetPwd.cshtml
@@ -3,8 +3,6 @@
 @{
 }
 
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-
 <div class="panel panelPrimary">
     <div class="panelBody">
         <div class="formGroup">
@@ -13,6 +11,6 @@
         </div>
     </div>
     <div class="panelFooter">
-        <button id="Post" type="button" class="btn btnPrimary">寄送驗證碼</button>
+        <button type="button" class="btn btnPrimary">寄送驗證碼</button>
     </div>
 </div>
