--- a/OnlineShop/Pages/Index.cshtml
+++ b/OnlineShop/Pages/Index.cshtml
@@ -24,7 +24,7 @@ else
             </div>
             <div class="panelFooter">
                 <button id="btnPost" type="button" class="btn btnPrimary">登入</button>
-                @Html.ActionLink("忘記密碼", "ForgetPwd", "Home")
+                @Html.ActionLink("忘記密碼", "ForgetPwd")
             </div>
         </div>
     </form>
