--- a/OnlineShop/Pages/Member/MemberMenu.cshtml
+++ b/OnlineShop/Pages/Member/MemberMenu.cshtml
@@ -3,4 +3,21 @@
 @{
 }
 
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
 
+
+<div class="panel panel-primary">
+    <div class="panel-heading">
+    </div>   <!--en dof panel-heading -->
+    <div class="panel-body">
+        <table class="table table-bordered" id="Table">
+            <tr>
+                <th>姓名</th>
+                <th>地址</th>
+                <th>購物金</th>
+            </tr>   <!--end of table-row -->
+        </table>   <!--end of table -->
+    </div> <!--end of Panel-body -->
+</div> <!--end of Panel -->
+
+<script src="~/js/MemberMenu.js"></script>  
