--- a/OnlineShop/Pages/Member/AddMember.cshtml
+++ b/OnlineShop/Pages/Member/AddMember.cshtml
@@ -24,13 +24,9 @@
             <label>信箱</label>
             <input id="txtMail" type="text" class="formControl">
         </div>
-        @*<div class="form-group">
-                <label>信箱認證碼</label>
-                <input type="text" class="form-control">
-            </div>*@
     </div>
     <div class="panelFooter">
-        <button id="btnPost" type="button" class="btn btnPrimary">註冊</button>
+        <button id="btnAddMember" type="button" class="btn btnPrimary">註冊</button>
     </div>
 </div>
 
