--- a/OnlineShop/Pages/Shared/_Layout.cshtml
+++ b/OnlineShop/Pages/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/css/allPage.css" />
 </head>
 <body>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <header>
         @if (User.Identity.IsAuthenticated)
         {
@@ -77,7 +78,7 @@
     @*<script src="~/lib/jquery/dist/jquery.min.js"></script>*@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/LoginData.js"></script>
+    <script src="~/js/LayOut.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
