20220506 1.新增驗證碼頁面(測試製作中)

--- a/OnlineShop/Pages/Member/MemberMenu.cshtml
+++ b/OnlineShop/Pages/Member/MemberMenu.cshtml
@@ -15,7 +15,7 @@
         <table class="table table-bordered" id="Table">
             <thead>
                 <tr>
-                    <th>ID</th>
+                    <th style="display : none">ID</th>
                     <th>姓名</th>
                     <th>地址</th>
                     <th>購物金</th>
@@ -23,7 +23,7 @@
             </thead>
             <tbody id="TableBody">
                 <tr>
-                    <td>@Model.Session01</td>
+                    <td style="display : none">@Model.Session01</td>
                     <td>@Model.accName</td>
                     <td>@Model.accAddress</td>
                     <td>@Model.accGold</td>
