20220510 1.更新帳號寄送驗證碼(可驗證, 時效性驗證待更新) 2.添加忘記密碼驗證頁面(更新密碼待更新)

--- a/OnlineShop/Pages/Member/AddMember.cshtml
+++ b/OnlineShop/Pages/Member/AddMember.cshtml
@@ -18,7 +18,7 @@
         </div>
         <div class="formGroup">
             <label>手機號碼</label>
-            <input id="txtPhone" type="text" class="formControl">
+            <input id="txtPhone" type="text" class="formControl" style="width:15%">
         </div>
         <div class="formGroup">
             <label>信箱</label>
