--- a/OnlineShop/Pages/Member/VerifyForgetPwd.cshtml
+++ b/OnlineShop/Pages/Member/VerifyForgetPwd.cshtml
@@ -1,20 +1,20 @@
 ﻿@page
-@model OnlineShop.Pages.Member.VerifyMemberModel
+@model OnlineShop.Pages.Member.VerifyForgetPwdModel
 @{
 }
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
-<h5>帳號驗證</h5>
+<h5>忘記密碼驗證</h5>
 <div class="panel panelPrimary">
     <div class="panelBody">
         <div class="formGroup">
-            <label>帳號</label>
-            <input id="txtAccount" type="text" class="formControl">
+            <label>新密碼</label>
+            <input id="newPassWord" type="password" class="formControl">
         </div>
         <div class="formGroup">
-            <label>密碼</label>
-            <input id="passWord" type="password" class="formControl">
+            <label>確認密碼</label>
+            <input id="checkPassWord" type="password" class="formControl">
         </div>
         <div class="formGroup">
             <label>驗證碼</label>
