--- a/OnlineShop/Pages/Index.cshtml
+++ b/OnlineShop/Pages/Index.cshtml
@@ -15,11 +15,11 @@ else
         <div class="panel panelPrimary">
             <div class="panelBody">
                 <div class="formGroup">
-                    <label>帳號：</label>
+                    <label>帳號</label>
                     <input id="txtAccount" type="text" class="formControl" maxlength="20">
                 </div>
                 <div class="formGroup">
-                    <label>密碼：</label>
+                    <label>密碼</label>
                     <input id="passWord" type="password" class="formControl" maxlength="16">
                 </div>
             </div>
