20220511 1.新增修改密碼Dto 2.更新忘記密碼驗證與修改密碼(缺頁面轉跳 & 時效性部分)

--- a/OnlineShop/Pages/Member/VerifyForgetPwd.cshtml
+++ b/OnlineShop/Pages/Member/VerifyForgetPwd.cshtml
@@ -9,6 +9,10 @@
 <div class="panel panelPrimary">
     <div class="panelBody">
         <div class="formGroup">
+            <label>帳號</label>
+            <input id="txtAccount" type="text" class="formControl">
+        </div>
+        <div class="formGroup">
             <label>新密碼</label>
             <input id="newPassWord" type="password" class="formControl">
         </div>
@@ -26,4 +30,4 @@
     </div>
 </div>
 
-<script src="~/js/VerifyMember.js"></script>
+<script src="~/js/VerifyForgetPwd.js"></script>
