--- a/OnlineShop/Pages/Member/MemberMenu.cshtml
+++ b/OnlineShop/Pages/Member/MemberMenu.cshtml
@@ -5,11 +5,6 @@
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
-@*<h5>NO : @Model.Session01</h5>
-<h5>真實姓名 : @Model.accName</h5>
-<h5>通訊地址 : @Model.accAddress</h5>
-<h5>購物金 : @Model.accGold</h5>*@
-
 <div class="panel panel-primary">
     <div class="panel-body">
         <table class="table table-bordered" id="Table">
@@ -23,7 +18,7 @@
             </thead>
             <tbody id="TableBody">
                 <tr>
-                    <td style="display : none">@Model.Session01</td>
+                    <td>@Model.MemberID</td>
                     <td>@Model.accName</td>
                     <td>@Model.accAddress</td>
                     <td>@Model.accGold</td>
