--- a/OnlineShop/Pages/_ViewImports.cshtml
+++ b/OnlineShop/Pages/_ViewImports.cshtml
@@ -1,3 +1,6 @@
-@using OnlineShopk
-@namespace OnlineShopk.Pages
+@using OnlineShop
+@using OnlineShop.Tool
+@namespace OnlineShop.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor Accessor
