20220516 1.更新忘記密碼驗證部分 2.會員中心錯誤修正 3.轉跳頁面修正

--- a/OnlineShop/Pages/Member/ForgetPwd.cshtml
+++ b/OnlineShop/Pages/Member/ForgetPwd.cshtml
@@ -15,6 +15,7 @@
     </div>
     <div class="panelFooter">
         <button id="btnSendCode" type="button" class="btn btnPrimary">寄送驗證碼</button>
+        <a href="" id="goBack">返回</a>
     </div>
 </div>
 
