--- a/OnlineShop/Pages/Member/MemberMenu.cshtml
+++ b/OnlineShop/Pages/Member/MemberMenu.cshtml
@@ -10,7 +10,7 @@
         <table class="table table-bordered" id="Table">
             <thead>
                 <tr>
-                    <th style="display : none">ID</th>
+                    <th style="display: none">ID</th>
                     <th>姓名</th>
                     <th>地址</th>
                     <th>購物金</th>
@@ -18,7 +18,7 @@
             </thead>
             <tbody id="TableBody">
                 <tr>
-                    <td>@Model.MemberID</td>
+                    <td style="display: none">@Model.MemberID</td>
                     <td>@Model.accName</td>
                     <td>@Model.accAddress</td>
                     <td>@Model.accGold</td>
