--- a/OnlineShop/Pages/IndexBack.cshtml
+++ b/OnlineShop/Pages/IndexBack.cshtml
@@ -1,4 +1,8 @@
 ﻿@page
-@model OnlineShop.Pages.IndexBackModel
+@model OnlineShop.Pages.indexModel
 @{
 }
+
+<div id="body" style="margin: 0 auto;">
+    後
+</div>
