--- a/OnlineShop/Pages/Shared/_Layout.cshtml
+++ b/OnlineShop/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                             <ul class="navbar-nav flex-grow-1">
                                 <li class="nav-item wordRight">
-                                    <a class="nav-link text-dark" asp-area="" asp-page="/Index">首頁</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/IndexBack">首頁</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-page="/Member/MemberMenu">會員中心</a>
@@ -50,6 +50,9 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-page="/Member/AddMember">註冊</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/Login">登入</a>
                                 </li>
                             </ul>
                         </div>
