--- a/OnlineShop/Pages/Index.cshtml
+++ b/OnlineShop/Pages/Index.cshtml
@@ -4,47 +4,94 @@
 }
 
 <div style="height: 120em;">
+    <!-- 商品類型 -->
     <div style=" background: cadetblue;">
         <ul class="siteRoadsign">
             <li>
-                <a>3C</a>
+                <a class="one">3C</a>
             </li>
             <li>
-                <a>周邊</a>
+                <a id="one">周邊</a>
             </li>
             <li>
-                <a>軟體</a>
+                <a id="one">軟體</a>
             </li>
         </ul>
     </div>
 
-    <div style=" background: cadetblue; height: 70px; margin-bottom: 6px; display: flex; align-items: center; justify-content: space-between;">
-        @*<input id="Search" type="text" class="acSearch" placeholder="輸入你想找的商品" autocomplete="off" />
-        <button id="btnSearch" type="button" class="btnSearch">搜尋</button>*@
-        <input id="Search" oninput="ProdMenufun.ProdListSearch()" />
+    <!-- 商品查詢 -->
+    <div id="prodSearch" class="SearchBox">
+        <input id="Search" type="text" class="enterSearch" placeholder="輸入你想找的商品" oninput="ProdMenufun.ProdListSearch()" />
+        @*<button id="btnSearch" type="button" class="btnSearch">搜尋</button>*@
+        <select id="SortSearch" class="dropDownSearch" onchange="ProdMenufun.ProdListSort(this.value)">
+            <option value="0">名稱(小->大)</option>
+            <option value="1">名稱(大->小)</option>
+            <option value="2">價格(低->高)</option>
+            <option value="3">價格(高->低)</option>
+            @*<option value="4">熱門(低->高)</option>
+                <option value="5">熱門(高->低)</option>*@
+        </select>
     </div>
 
-    <div>
-        @*<div class="prodBody">
+    <!-- 商品清單 -->
+    <div id="prodList">
+        <!-- 商品頁面打底
+        <div class="prodBody">
             <div>
-                <a class="prodImg"><img /></a>
+                <a class="prodImg"><img src="~/images/product/Apple 13.jpg" /></a>
                 <div class="prodName">
                     <h5 class="prodNick">
                         <a>
-                            <span class="prodExtra">123321</span>
+                            <span class="prodExtra">【Apple 蘋果】iPhone 13 128G 6.1吋(綠色)</span>
                         </a>
                     </h5>
                 </div>
                 <div class="prodPrice">
-                    <span class="prodDollar">$<span class="prodValue">123321</span></span>
+                    <span class="prodDollar">$<span class="prodValue">24999</span></span>
                 </div>
                 <div class="prodJoin">
                     <input type="Button" value="加入購物車" />
                     <input type="Button" value="加入喜好" />
                 </div>
             </div>
-        </div>*@
+        </div> -->
         <div id="prodBody" class="prodSite">
+        </div>
+    </div>
+
+    <!-- 商品內頁 -->
+    <div id="prodInside" style="border: solid 2px; padding: 5px; display: none; position:relative; z-index:99; ">
+        <div id="prodInsideBody">
+            <div>
+                <div><img src="~/images/product/Apple 13.jpg" /></div>
+            </div>
+            <div>
+                <div>
+                    <h5>
+                        <span>【Apple 蘋果】iPhone 13 128G 6.1吋(綠色)</span>
+                    </h5>
+                </div>
+                <div>
+                    <span>
+                        主機板晶片組：B460
+                        記憶體：16GB DDR4 = 原廠8G + 創見8G(需自行安裝)
+                        硬碟：512GB M.2 SSD
+                        光碟機：DVD writer 8X
+                        螢幕輸出介面：D-Sub(VGA)．HDMI．DP
+                        電源供應 : 500W power supply (80+ Bronze, peak 550W)
+                        其他：Wi-Fi 5(802.11ac)+Bluetooth 4.2 (Dual band) 1*1
+                        作業系統：Windows 11 家用版 (64 bit)
+                        保固：三年保固/到府收送
+                    </span>
+                </div>
+                <div>
+                    <span>$<span>24999</span></span>
+                </div>
+            </div>
+            <div class="prodJoin">
+                <input type="Button" value="加入購物車" />
+                <input type="Button" value="加入喜好" />
+            </div>
         </div>
     </div>
 </div>
