--- a/OnlineShop/Pages/Shared/_Layout.cshtml
+++ b/OnlineShop/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/allPage.css" />
+    <link rel="stylesheet" href="~/css/allProduct.css" />
 </head>
 <body>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
